--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,15 @@ targetCompatibility = 1.8
 
 mainClassName = 'com.simulador.credito.Application'
 
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile group: 'com.miglayout', name: 'miglayout-swing', version: '5.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
 run{
     standardInput = System.in
 }
@@ -23,12 +32,5 @@ jar {
                 'Main-Class': 'com.simulador.credito.Application'
         )
     }
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    from configurations.runtime.collect { zipTree(it) }
 }
